--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "danmichaelo/quitesimplexmlelement": "master-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-0": {
