--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "danmichaelo/simplemarcparser",
     "description": "A simple MARC21/XML parser",
     "keywords": ["marc"],
+    "version": "0.2.0",
     "license": "MIT",
     "authors": [
         {
