--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "danmichaelo/quitesimplexmlelement": "dev-master",
-        "nesbot/Carbon": "dev-master"
+        "nesbot/Carbon": "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
