--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "danmichaelo/quitesimplexmlelement": "dev-master",
-        "nesbot/Carbon": "1.*"
+        "nesbot/Carbon": "1.*",
+        "illuminate/support": "4.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
