--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         }
     ],
     "require": {
+        "php": ">=5.3",
         "danmichaelo/quitesimplexmlelement": "dev-master",
         "nesbot/Carbon": "1.*",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "~4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "~0.6"
     },
     "autoload": {
         "psr-4": {
