Add minimum stability: dev

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,6 @@
         "psr-4": {
             "Scriptotek\\SimpleMarcParser\\": "src/"
         }
-    }
-
+    },
+    "minimum-stability": "dev"
 }
