--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.3",
         "danmichaelo/quitesimplexmlelement": "~0.2.4",
         "nesbot/Carbon": "1.*",
-        "illuminate/support": "~4.1"
+        "illuminate/support": "~4.1|~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
