--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,16 @@
             "email": "danmichaelo@gmail.com"
         }
     ],
+    "bin" : ["bin/marc2json"],
     "support": {
         "issues": "http://github.com/scriptotek/simplemarcparser/issues"
     },
     "require": {
-        "php": ">=5.3",
-        "danmichaelo/quitesimplexmlelement": "~0.2.4",
+        "php": ">=5.4",
+        "danmichaelo/quitesimplexmlelement": "~0.4.0",
         "nesbot/Carbon": "1.*",
-        "illuminate/support": "~4.1|~5.0"
+        "illuminate/support": "~4.1|~5.0",
+        "mrjgreen/php-cli" : "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
