--- a/composer.json
+++ b/composer.json
@@ -15,20 +15,21 @@
         "issues": "http://github.com/scriptotek/simplemarcparser/issues"
     },
     "require": {
-        "php": ">=5.4",
-        "danmichaelo/quitesimplexmlelement": "~0.4.0",
+        "php": ">=5.6",
+        "danmichaelo/quitesimplexmlelement": "~1.0",
         "nesbot/Carbon": "1.*",
         "illuminate/support": "~4.1|~5.0",
         "mrjgreen/php-cli" : "1.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "~0.6"
+        "phpunit/phpunit": "~5.7|~6.0",
+        "satooshi/php-coveralls": "~1.0"
     },
     "autoload": {
         "psr-4": {
             "Scriptotek\\SimpleMarcParser\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
